syntax = "proto3";

package service;

option go_package = "../service";

message ReqParam {
    int32 id = 1;
    string name = 2;
}

message ResParam {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
    string phone = 5;
}

service QueryUser {
    rpc GetUserInfo(ReqParam) returns (ResParam);
}